Fix BirdNameCard color on dark mode

--- a/frontend-service/client/src/bird/CoverNameCard.scss
+++ b/frontend-service/client/src/bird/CoverNameCard.scss
@@ -20,4 +20,8 @@
   & > p.binomial {
     margin-top: 0px;
   }
+
+  @media (prefers-color-scheme: dark) {
+    color: $white;
+  }
 }
